[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = F403,F405
max-line-length = 90

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
name = kolt
author = Oz N Tiram
author-email = oz.tiram@noris.de
summary = launch kubernetes clusters on OpenStack
description-file = README.rst
home-page = https://gitlab.com/norisnetwork/koris
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3',
    Programming Language :: Python :: 3.5,
    Programming Language :: Python :: 3.6,
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development

[files]
packages =
    koris

[entry_points]
console_scripts =
  koris = koris.koris:main
