[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = F403,F405
max-line-length = 90

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
env =
    OS_USERNAME=testuser
    OS_PASSWORD=testpassword
    OS_AUTH_URL=https://de-nbg6-1.noris.cloud:5000/v3
    OS_PROJECT_ID=a348bc5b808b4119a199b65b83835d6b
    OS_PROJECT_NAME="PI"
    OS_USER_DOMAIN_NAME="noris.de"
    OS_REGION_NAME="de-nbg-6"

[metadata]
name = kiosk
author = Oz N Tiram
author-email = oz.tiram@gmail.com
summary = launch kubernetes clusters on OpenStack
description-file = README.rst
home-page = https://gitlab.com/oz123/kiosk
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3',
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development

[files]
packages =
    kiosk

[entry_points]
console_scripts =
  kiosk = kiosk.kiosk:main
